--- a/WebContent/admin/login.html
+++ b/WebContent/admin/login.html
@@ -25,7 +25,7 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
-        <form>
+        <form action="loginProc" name="frm">
           <div class="form-group">
             <div class="form-label-group">
               <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
