--- a/WebContent/admin/register.html
+++ b/WebContent/admin/register.html
@@ -1,86 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>SB Admin - Register</title>
-
-  <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-
-  <!-- Custom styles for this template-->
-  <link href="css/sb-admin.css" rel="stylesheet">
-
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	
+	<title>SB Admin - Register</title>
+	
+	<!-- Custom fonts for this template-->
+	<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+	<!-- Custom styles for this template-->
+	<link href="css/sb-admin.css" rel="stylesheet">
 </head>
+<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+function DaumPostcode() {
+    new daum.Postcode({
+        oncomplete: function(data) {
+            var addr = ''; // 주소 변수
+            var extraAddr = ''; // 참고항목 변수
+
+            if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                addr = data.roadAddress;
+            } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                addr = data.jibunAddress;
+            }
+	
+            if(data.userSelectedType === 'R'){
+                // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                    extraAddr += data.bname;
+                }
+                // 건물명이 있고, 공동주택일 경우 추가한다.
+                if(data.buildingName !== '' && data.apartment === 'Y'){
+                    extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                }
+                // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                if(extraAddr !== ''){
+                    extraAddr = ' (' + extraAddr + ')';
+                }
+                // 조합된 참고항목을 해당 필드에 넣는다.
+                document.getElementById("extraAddress").value = extraAddr;
+            
+            } else {
+                document.getElementById("extraAddress").value = '';
+            }
+            // 우편번호와 주소 정보를 해당 필드에 넣는다.
+            document.getElementById('postcode').value = data.zonecode;
+            document.getElementById("address").value = addr;
+            // 커서를 상세주소 필드로 이동한다.
+            document.getElementById("detailAddress").focus();
+        }
+    }).open();
+}
+
+</script>
 
 <body class="bg-dark">
 
   <div class="container">
     <div class="card card-register mx-auto mt-5">
-      <div class="card-header">Register an Account</div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="text" id="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
-                  <label for="firstName">First name</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="text" id="lastName" class="form-control" placeholder="Last name" required="required">
-                  <label for="lastName">Last name</label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="form-label-group">
-              <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
-              <label for="inputEmail">Email address</label>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
-                  <label for="inputPassword">Password</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
-                  <label for="confirmPassword">Confirm password</label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="btn btn-primary btn-block" href="login.html">Register</a>
-        </form>
-        <div class="text-center">
-          <a class="d-block small mt-3" href="login.html">Login Page</a>
-          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
-        </div>
-      </div>
+    	<div class="card-header">Register an Account</div>
+    		<div class="card-body">
+    		
+	        <form action="registerProc.jsp" name="frm" onsubmit="return isValidate(frm);"> 
+	         	<div class="form-group">
+	        		<div class="form-row">
+	        			<div class="col-md-6">
+	        				<div class="form-label-group">
+				                <input type="text" id="id" name="user_id" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
+				                <label for="id">아이디</label>
+	                		</div>
+	              		</div>
+	              	<div class="col-md-6">
+	                	<div class="form-label-group">
+	                  			<input type="text" id="name" id="id" class="form-control" placeholder="Last name" required="required">
+	                  			<label for="name">이름</label>
+	                		</div>
+	              		</div>
+	            	</div>
+	        	</div>
+	          	<div class="form-group">
+	            	<div class="form-label-group">
+	              		<input type="email" id="email" name="email" class="form-control" placeholder="Email address" required="required">
+	              		<label for="email">이메일</label>
+	            	</div>
+	          	</div>
+	          	<div class="form-group">
+	           		<div class="form-row">	
+	              		<div class="col-md-6">
+	                		<div class="form-label-group">
+	                  			<input type="password" name="user_pw" id="pwd1" class="form-control" placeholder="Password" required="required">
+	                  			<label for="pwd1">비밀번호</label>
+	                		</div>
+	              		</div>
+	              		<div class="col-md-6">
+	                		<div class="form-label-group">
+	                  			<input type="password" name="user_pw2" id="pwd2" class="form-control" placeholder="Password" required="required">
+	                  			<label for="pwd2">비밀번호 확인</label>
+	                		</div>
+	              		</div>
+	            	</div>
+	            </div>
+	            <div class="form-group">
+	            	<div class="form-row">
+	          			<div class="col-md-4">
+	          				<div class="form-label-group">
+		            			<input type="text" name="tel1" id="tel1" value="" maxlength="3" class="form-control" placeholder="Tel1" required="required"/>
+		            			<label for="tel1">집번호</label>
+		            		</div>
+	            		</div>
+	            		<div class="col-md-4">
+	            			<div class="form-label-group">
+	            				<input type="text" name="tel2" id="tel2" value="" maxlength="4" class="form-control" placeholder="Tel2" required="required"/>
+		            			<label for="tel2">집번호</label>
+	            			</div>
+	            		</div>
+	            		<div class="col-md-4">
+	          				<div class="form-label-group">
+		            			<input type="text" name="tel3" id="tel3" value="" maxlength="4" class="form-control" placeholder="Tel3" required="required"/>
+		            			<label for="tel3">집번호</label>
+		            		</div>
+	            		</div>
+	            	</div>
+	            </div>
+	            <div class="form-group">
+	            	<div class="form-row">
+	            		<div class="col-md-4">
+	            			<div class="form-label-group">
+	            				<input type="text" name="mobile1" id="mobile1" value="" maxlength="3" class="form-control" placeholder="Mob1" required="required"/>
+		            			<label for="mobile1">핸드폰번호</label>
+	            			</div>
+	            		</div>
+	            		<div class="col-md-4">
+	            			<div class="form-label-group">
+	            				<input type="text" name="mobile2" id="mobile2" value="" maxlength="4" class="form-control" placeholder="Mob2" required="required"/>
+		            			<label for="mobile2">핸드폰번호</label>
+	            			</div>
+	            		</div>
+	            		<div class="col-md-4">
+	            			<div class="form-label-group">
+	            				<input type="text" name="mobile3" id="mobile3" value="" maxlength="4" class="form-control" placeholder="Mob3" required="required"/>
+		            			<label for="mobile3">핸드폰번호</label>
+	            			</div>
+	            		</div>
+	            	</div>
+	            </div>
+	            <div class="form-group">
+	            	<div class="form-row">
+	            		<div class="col-md-6">
+			            	<div class="form-label-group">
+			            		<input type="text" id="postcode" name="zip1"  class="form-control" readonly />
+			            		<label for="postcode"></label>
+			            	</div>
+			            </div>
+			            <div class="col-md-6">
+			            	<div class="form-label-group">
+			            		<input type="button" onclick="DaumPostcode()" value="우편번호 찾기"><br>
+			            	</div>
+			            </div>
+			        </div>
+	            </div>
+	            <div class="form-group">
+	            	<div class="form-label-group">
+	            		<input type="text" id="address" name="addr1" class="form-control" value="주소" onfocus="addFocus(1,this);" onblur="addFocus(2,this);" /><br>
+	            		<label for="address"></label>
+	            	</div>
+	            </div>
+	            <div class="form-group">
+	            	<div class="form-label-group">
+	            		<input type="text" id="detailAddress" name="addr2" class="form-control" value="상세주소" onfocus="detailaddFocus(1,this);" onblur="detailaddFocus(2,this);"  />
+	            		<label for="detailAddress"></label>
+	            	</div>
+	            </div>
+	            <div class="form-group">
+	            	<div class="form-label-group">
+	            		<input type="text" id="extraAddress" name="addr3" class="form-control" value="참고항목" onfocus="refFocus(1,this);" onblur="refFocus(2,this);" /><br>
+	            		<label for="extraAddress"></label>
+	            	</div>
+	            </div>
+        		<input type="submit" class="btn btn-primary btn-block" value="Register">
+        	</form>
+	        <div class="text-center">
+	        	<a class="d-block small mt-3" href="login.html">Login Page</a>
+	        	<a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+	        </div>
+     	</div>
     </div>
-  </div>
+ </div>
+<script>
+function addFocus(flag,obj){
+    if(flag==1){//포커스를 얻었을 때
+        if(obj.value=="주소"){
+            obj.value = "";
+        }
+    }
+    else if(flag==2){//포커스를 잃었을 때
+        if(obj.value==""){
+            obj.value="주소";
+        }
+    }
+}
 
-  <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+function detailaddFocus(flag,obj){
+    if(flag==1){//포커스를 얻었을 때
+        if(obj.value=="상세주소"){
+            obj.value = "";
+        }
+    }
+    else if(flag==2){//포커스를 잃었을 때
+        if(obj.value==""){
+            obj.value="상세주소";
+        }
+    }
+}
 
-  <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+function refFocus(flag,obj){
+    if(flag==1){//포커스를 얻었을 때
+        if(obj.value=="참고항목"){
+            obj.value = "";
+        }
+    }
+    else if(flag==2){//포커스를 잃었을 때
+        if(obj.value==""){
+            obj.value="참고항목";
+        }
+    }
+}
 
+function isValidate(frm){
+
+	if (frm.user_pw.value != frm.user_pw2.value) {
+		alert("입력한 두 개의 비밀번호가 서로  일치하지 않습니다.");
+		return false;
+	}
+    //비밀번호 유효성 검사
+    var UserPassword = document.frm.user_pw;
+    if(UserPassword.value.length<4 && UserPassword.value.length>12) {
+    	alert("비밀번호는 4자 이상 12자 이내의 영문/숫자/특수문자 조합으로 입력해주세용");
+		return false;
+    }
+    if(!UserPassword.value.match(/([a-zA-Z0-9].*[!,@,#,$,%,^,&,*,?,_,~,-])|([!,@,#,$,%,^,&,*,?,_,~,-].*[a-zA-Z0-9])/)) {
+        alert("비밀번호는 4자 이상 12자 이내의 영문/숫자/특수문자 조합으로 입력해주세용");
+        return false;
+    }
+    location.href='login.html';
+}
+
+
+</script>
+
+
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 </body>
-
 </html>
